백엔드 연결

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,1 @@
-NEXT_PUBLIC_API_URL=http://localhost:3000/
-
-// 기존에 사용하던 백엔드 서버 중단
-// https://port-0-todo-nextjs-1jx7m2gldb74hdq.gksl2.cloudtype.app/
+NEXT_PUBLIC_API_URL=https://port-0-todo-nextjs-1jx7m2gldb74hdq.gksl2.cloudtype.app/
