--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://port-0-todo-nextjs-1jx7m2gldb74hdq.gksl2.cloudtype.app/
+# NEXT_PUBLIC_API_URL=https://port-0-todo-nextjs-1jx7m2gldb74hdq.gksl2.cloudtype.app/
